[package]
name = "mediacodec"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Rust bindings to MediaCodec, with an easy-to-use API"
repository = "https://github.com/hardebayho/rust_mediacodec"
license = "MIT"
keywords = ["bindings", "multimedia", "mediacodec", "codec", "android"]
categories = ["api-bindings", "encoding", "multimedia", "multimedia::audio", "multimedia::video"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mediacodec"
crate-type = ["cdylib"]

[[example]]
name = "demuxing"
crate-type = ["cdylib"]

[[example]]
name = "decoding"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
android_log = "0.1.3"
jni = "0.19.0"
javavm = "*"
ndk-glue = { version = "*", features = ["logger"] }
oboe = "0.4.4"
# samplerate = "0.2.4"
# image = "0.23.14"
# palette = "0.6.0"
# qrcode-generator = "4.1.2"
# resize = "0.7.2"

[features]
api24 = []
api26 = ["api24"]
api28 = ["api26"]
api29 = ["api28"]

# For cargo apk to test the library
[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 31

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi" ]

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "*", features = ["logger"] }
